--- a/src/Home.css
+++ b/src/Home.css
@@ -3,7 +3,7 @@
   grid-template: 60px 1fr 1fr 1fr 1fr 1fr 1fr / 25% 75%;
   height: 100vh;
   grid-template-areas:
-    'header header'
+    'CandidateForm header'
     'CandidateForm GithubTable'
     'CandidateForm GithubTable'
     'CandidateForm GithubTable'
@@ -25,6 +25,7 @@
 
 .CandidateForm {
   grid-area: CandidateForm;
+  margin-top: 5px;
 }
 
 .FilterRepos {
